fix bottom spacing, add OG metadata

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -68,7 +68,7 @@ a {
 
 body {
   margin: 20px;
-  padding-bottom: 80px;
+  padding-bottom: 24px;
 
   @include sm {
     margin: 32px;
